--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dompurify": "^3.2.6",
     "lucide-react": "^0.525.0",
     "next": "15.3.2",
     "react": "^19.0.0",
